--- a/first/index.html
+++ b/first/index.html
@@ -7,7 +7,13 @@
     <title>Document</title>
 </head>
 <body>
-    인덱스 페이지
-    master 페이지
+    first
+    firstBranch
+    master
+    firstbranch
+    git add
+    개발자2가 github 홈페이지에서 직접 수정 
+    내 컴퓨터에서 수정
+    개발자3이 수정d
 </body>
 </html>
