--- a/first/merge.html
+++ b/first/merge.html
@@ -7,15 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    first
-    firstBranch
-    master
-    firstbranch
-    git add
-    개발자2가 github 홈페이지에서 직접 수정 
-    내 컴퓨터에서 수정
-    개발자3이 수정
-    개발자3이 수정
-    인덱스 수정
+    merge 수정
 </body>
 </html>
